# codescan

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
config/: config.enterprise.yaml  config.example.yaml
docs/: DATAFLOW.md  DESIGN.docx  DESIGN.md  GOVERNANCE.md  RELEASING.md  SECURITY_FRAMEWORKS.md  THREATMODEL.md  build_docx.mjs  make_diagram.py
fixtures/: PAY__checkout.openhack.json  PAY__checkout.snyk.json  PAY__checkout.xray.json  PLATFORM__gateway.snyk.json
src/codescan/: audit.py  calibration.py  cli.py  concurrency.py  config.py  dedup_ai.py  exploitability.py  feedback.py  llm.py  logging_setup.py  models.py  openhack_engine.py  openhack_runner.py  pipeline.py  ratelimit.py  scoring.py  servicenow.py  threatmodel.py  validation.py  vault.py  web.py
src/codescan/connectors/: __init__.py  base.py  github.py  github_alerts.py  openhack.py  sarif.py  sbom.py  snyk.py  xray.py
src/codescan/enrich/: ai.py  base.py  enricher.py  epss.py  kev.py  reachability.py
src/codescan/providers/: __init__.py  anthropic_provider.py  base.py  foundry_provider.py  google_provider.py  openai_provider.py
src/codescan/static/: index.html
tests/: test_audit.py  test_batch.py  test_calibration.py  test_cli.py  test_cli_live.py  test_concurrency.py  test_enrichment.py  test_enterprise.py  test_exploitability.py  test_feedback.py  test_foundry_provider.py  test_github.py  test_github_alerts.py  test_httpclient.py  test_llm_router.py  test_models.py  test_openhack.py  test_openhack_engine.py  test_openhack_runner.py  test_pipeline.py  test_providers.py  test_ratelimit.py  test_sarif_connector.py  test_sbom_connector.py  test_scoring.py  test_security.py  test_servicenow.py  test_state_store_sql.py  test_threatmodel.py  test_validation.py  test_vault.py  test_web.py
