[project]
name = "codescan"
version = "0.1.0"
description = "Enterprise code-scanning pipeline: Bitbucket + Snyk + Xray -> AI exploitability/chaining -> ServiceNow Vulnerability Response"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "requests>=2.31",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "httpx>=0.27"]
# Extra AI suppliers for the multi-provider harness (Anthropic is a core dep).
providers = ["openai>=1.40", "google-genai>=0.3"]

[project.scripts]
codescan = "codescan.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codescan = ["static/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
