[project]
name = "codescan"
version = "0.1.0"
description = "Enterprise code-scanning pipeline: Bitbucket + Snyk + Xray -> AI exploitability/chaining -> ServiceNow Vulnerability Response"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "requests>=2.31",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8", "httpx>=0.27", "sqlalchemy>=2.0"]
# Extra AI suppliers for the multi-provider harness (Anthropic is a core dep).
providers = ["openai>=1.40", "google-genai>=0.3"]
# Pull secrets from HashiCorp Vault into the environment (config vault.enabled).
vault = ["hvac>=1.1"]
# Shared SQL state store for HA (config storage.backend=sql). Add a driver for
# Postgres, e.g. psycopg[binary]; SQLite needs no extra driver.
sql = ["sqlalchemy>=2.0"]
# Regenerate the architecture PNG: python docs/make_diagram.py (the Word doc is
# built with `node docs/build_docx.mjs`).
docs = ["matplotlib>=3.7"]

[project.scripts]
codescan = "codescan.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codescan = ["static/*.html", "py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
files = ["src/codescan"]
# Optional third-party deps (lazy-imported) and libs without bundled stubs.
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
